# AI-Local-Version-Ctrl

./: .gitignore  PLAN.md  README.md  dummy2.txt  pyproject.toml  requirements.txt
.github/workflows/: release.yml
ai_changelist.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/: cli.py
src/commands/: handler.py
src/core/: differ.py  models.py  repository.py
