[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-changelist"
version = "0.1.0"
description = "AI prompt session versioning tool"
authors = [
    {name = "Developer"}
]
readme = "PLAN.md"
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.4.0",
    "rich>=13.6.0",
    "pathspec>=0.11.0"
]

[project.scripts]
ai-cl = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
